--- a/config.toml
+++ b/config.toml
@@ -84,10 +84,10 @@ name = "Mariia Lesina"
 title = "Vice President"
 body = "I am a Master’s student in Human Rights Studies at Lund University and an Innovation intern at UNDP. Having a professional background of two years as an AI Ethics Specialist, I view making AI more ethical and transparent as my main career goal."
 [[params.three.feature]]
-headshot = '<img src="team/dasha2.jpg"/ class="headshot">'
-name = "Daria Kashtanova"
+headshot = '<img src="team/diana.jpg"/ class="headshot">'
+name = "Diana Nadyrova"
 title = "Head of External Partnerships"
-body = "Currently I am pursuing a MSc in Development Studies majoring in Politics. My interests lie within the public and security domains, as well as economic development of the states. Thus, I could not help but wonder how the new technology, AI specifically, shape the world we live in? Also, having a passion for diplomacy, I love to negotiate with others, which led me to the position of Head of the External Partnership Committee. At HubAI, I connect businesses and organisations with students, and make such cooperations smooth and fruitful."
+body = "I am a Bachelor’s student in Economy and Society with a strong interest in how artificial intelligence interacts with economics, policy, and society. \n As Head of External Partnerships at HubAI, I work on building meaningful connections between students, organizations, and industry partners. I focus on creating collaborations that go beyond single events and instead grow into long-term relationships that support learning, innovation, and real-world impact. Through partnerships, I aim to help HubAI act as a bridge between students and real-world applications of AI."
 
 [[params.three.feature]]
 headshot = '<img src="team/alexander.jpg"/ class="headshot">'
